--- a/src/roundups/464.md
+++ b/src/roundups/464.md
@@ -26,7 +26,7 @@ Welcome to the latest edition of the Haxe Roundup. [Haxe](http://haxe.org/?ref=h
 - [**WWE** announced a partnership with Massive Interactive](https://twitter.com/Massive_Voice/status/1086459732787953667). :muscle:
 - [Stencyl 4 had been released](http://www.stencyl.com/features/history/), you can watch a short video about the update by [gamefromscratch.com](https://www.gamefromscratch.com/post/2019/01/22/Stencyl-4-Released.aspx).
 - Online [logic node editor](http://forums.armory3d.org/t/embed-logic-nodes-on-the-web/2491) for Armory3D. :star2:
-- Terry Cavangh has a [Dicey Dungeons stand](https://twitter.com/diceydungeons/status/1086290769864994816) at PAX South, also releasing the [PAX South Trailer](https://www.youtube.com/watch?v=IzgNIr3ZC9E) and the [Dicy Dungeons Steam](https://store.steampowered.com/app/861540/Dicey_Dungeons/).
+- Terry Cavangh has a [Dicey Dungeons stand](https://twitter.com/diceydungeons/status/1086290769864994816) at PAX South, also releasing the [PAX South Trailer](https://www.youtube.com/watch?v=IzgNIr3ZC9E) and the [Dicey Dungeons Steam](https://store.steampowered.com/app/861540/Dicey_Dungeons/).
 - What do you [dislike and want to improve in Haxe?](https://community.haxe.org/t/what-do-you-dislike-and-want-to-improve-in-haxe/1446) thread by Dmitry Hryppa.
 - [A little teaser](https://twitter.com/d0oo0p/status/1086645485857853441) for an installation that [Logic Interactive](https://twitter.com/Logicint) are working on for Teknisk Museum in Norway. Built with UE4, Haxe and `Unreal.hx`. [With a potential talk](https://twitter.com/d0oo0p/status/1087330578591039488) about using Haxe and Unreal for physical installations, the workflow and tools built for it.
 - [OpenFL Sandbox](http://try.openfl.org/). It’s ES6 JavaScript, but it may use TypeScript in the future. :star2:
