Room 8 Studio is an Ukranian company

--- a/src/roundups/485.md
+++ b/src/roundups/485.md
@@ -55,7 +55,7 @@ Welcome to the latest edition of the Haxe Roundup. [Haxe](http://haxe.org/?ref=h
 ### Job Offers & Bounties
 
 - [Nevosoft Inc](http://company.nevosoft.ru/) _(Saint-Petersburg, Russia)_ are looking for a [Haxe developer](https://spb.hh.ru/vacancy/31872119) to join [Charm Farm](https://www.facebook.com/OfficialCharmFarm/) team. :new: :ru:
-- Room 8 Studio _(Kiev, Ukraine)_ are looking for a [C#/Haxe developer](https://gamedev.ru/job/forum/?id=244867). :ru:
+- Room 8 Studio _(Kiev, Ukraine)_ are looking for a [C#/Haxe developer](https://gamedev.ru/job/forum/?id=244867). :ua:
 - Inno Games are looking for a [Frontend (Haxe) developer](https://www.innogames.com/de/innogames-karriere/detail/job/frontend-developer-haxe-elvenar/) _(btw, you could apply through [Dan Korostelev](https://twitter.com/nadako/), who is working at Inno Games)_. :new:
 - Poptropica game are [looking for a remote Haxe developer](https://community.haxe.org/t/looking-for-remote-haxe-developer-with-experience-converting-flash-games-to-web-and-mobile/1776) to convert Flash games to web and mobile. :earth_africa:
 - Haxe developers wanted in Montreal to [join Mino Games](https://community.haxe.org/t/job-haxe-developers-wanted-in-montreal/1731/1).
